--- a/_setup_backup/work_launch.json
+++ b/_setup_backup/work_launch.json
@@ -1,4 +1,7 @@
 {
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
@@ -20,7 +23,8 @@
                     "ignoreFailures": true
                 }
             ],
-            "preLaunchTask": "build"  // Run the build task before debugging
+            "preLaunchTask": "cpp_build"  // Run the build task before debugging
         }
+
     ]
 }
