--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
-*.exe
-*.xlsx
-*.xlsm
-*.txt
+*.7z
 *.accdb
 *.bat
+*.bin
 *.dat
 *.dll
-*.7z
-*.zip
-*.bin
-*.lnk
+*.exe
 *.gguf
+*.lnk
+*.txt
+*.xlsm
+*.xlsx
+*.zip
 llm/llama.cpp/
 llm/models
+llm/matchQA/data/vec_dase.bin
