--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ llm/llama.cpp/
 llm/models
 llm/matchQA/data/vec_dase.bin
 llm/matchQA/data/vec_dase.bin
+webscrape/get_bible_verses/output/lookup_verses_output.txt
+webscrape/get_bible_verses/input/lookup_verses.txt
