Stop tracking lookup_verses files

--- a/.gitignore
+++ b/.gitignore
@@ -16,9 +16,9 @@
 *.xlsm
 *.xlsx
 *.zip
-llm/llama.cpp/
-llm/models
-llm/matchQA/data/vec_dase.bin
-llm/matchQA/data/vec_dase.bin
-webscrape/get_bible_verses/output/lookup_verses_output.txt
+./llm/llama.cpp/
+./llm/models
+./llm/matchQA/data/vec_dase.bin
+./webscrape/get_bible_verses/output/lookup_verses_output.txt
+./webscrape/get_bible_verses/input/lookup_verses.txt
 webscrape/get_bible_verses/input/lookup_verses.txt
