--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ webscrape/get_bible_verses/output/
 webscrape/get_bible_verses/input/lookup_verses.txt
 temp.txt
 file_utilities/list_files_by_date/search_results.txt
+estim/mag/
