--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@
 llm/llama.cpp/
 llm/models
 llm/matchQA/data/vec_dase.bin
+llm/matchQA/data/new_questions.csv
+llm/matchQA/data/database_questions_answers.csv
 webscrape/get_bible_verses/output/
 webscrape/get_bible_verses/input/lookup_verses.txt
 temp.txt
